Fixed an overflow problem in the navigation bar

--- a/style/navBarStyle.css
+++ b/style/navBarStyle.css
@@ -8,7 +8,7 @@
     justify-content: space-between;
     position: fixed;
     flex-direction: column;
-    overflow-y: hidden;
+    overflow: hidden;
     background-color: var(--neutral-variant-90);
 }
 
